--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header>
         <div class="naglowki">
         <div class="text0"><h2>
-            <a href="http://127.0.0.1:5500/index.html">
+            <a href="https://borysbartlomiej.github.io">
                 <img src="../img/borys.png" alt="strona1" style="border: 0">
             </a>
         </h2></div>
