--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <header>
         <div class="naglowki">
-        <div class="text0"><h2>
+        <div class="text0">
             <a href="http://127.0.0.1:5500/index.html">
                 <img src="../img/borys.png" alt="strona1" style="border: 0">
             </a>
