--- a/index.html
+++ b/index.html
@@ -3,7 +3,14 @@
 <head>
     <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Rusty.</title>
+  
+  <meta name="Opis:" content="Nazywam się Bartłomiej Borys, możesz mnie znać pod pseudonimem Rusty.">
+  
+  <meta name="og:title" property="og:title" content="Rusty.">
+  <meta name="og:image" property="og:image" content="https://ucdecbbe29a8cad6b4df945fb4f1.previews.dropboxusercontent.com/p/thumb/AA9_ZYjImUfXaNC8OUbIJJU-lEK-vDv5NVmf-VXDRb2mvB-PHo873PHGVu3JIfzaChkihWKHnLQEj4ek7aW9SlV3_WXyAORe6hBaCyC5523bLDKDYJw6Ez2T6BgtoLu-UgM54NztMhGfW3hL9GHL8gvMfxGQ2SWZk9omvZ2FohsbnTi_GSRl7j_s-qhsUbpAnJtjMHU5Kue_iHJrrosvQER6yVDi8O4Vduxug5ZtqkyFN1_asttuOSLYVKr99dGDLFnhQDEMXtwxzXJpu6hTZcE4KaxNIogNCGnYIbo9JPRl5IwWJM6YzRMRglMwoTIgwAJlbWCTRxRU75M6zxkHqX_lIRcEw60tbwSNUw1BJLs6vD4zfyna3gFPpz1XLiXNCHtwZQmusmcT7ryBu-v9Bl6A/p.png?fv_content=true&size_mode=5">
+  <meta name="og:description" property="og:description" content="Nazywam się Bartłomiej Borys">
+
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/fontello.css">
   <link rel="preconnect" href="https://fonts.gstatic.com">
