--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="Opis:" content="Nazywam się Bartłomiej Borys, możesz mnie znać pod pseudonimem Rusty.">
   
   <meta name="og:title" property="og:title" content="Rusty.">
-  <meta name="og:image" property="og:image" content="https://ucdecbbe29a8cad6b4df945fb4f1.previews.dropboxusercontent.com/p/thumb/AA9_ZYjImUfXaNC8OUbIJJU-lEK-vDv5NVmf-VXDRb2mvB-PHo873PHGVu3JIfzaChkihWKHnLQEj4ek7aW9SlV3_WXyAORe6hBaCyC5523bLDKDYJw6Ez2T6BgtoLu-UgM54NztMhGfW3hL9GHL8gvMfxGQ2SWZk9omvZ2FohsbnTi_GSRl7j_s-qhsUbpAnJtjMHU5Kue_iHJrrosvQER6yVDi8O4Vduxug5ZtqkyFN1_asttuOSLYVKr99dGDLFnhQDEMXtwxzXJpu6hTZcE4KaxNIogNCGnYIbo9JPRl5IwWJM6YzRMRglMwoTIgwAJlbWCTRxRU75M6zxkHqX_lIRcEw60tbwSNUw1BJLs6vD4zfyna3gFPpz1XLiXNCHtwZQmusmcT7ryBu-v9Bl6A/p.png?fv_content=true&size_mode=5">
+  <meta name="og:image" property="og:image" content="https://ucc5a2d63677a20ecc96b78ce98f.previews.dropboxusercontent.com/p/thumb/AA_X3xlRw1loEImiiYG5TYAbCvq94zdu9VS4gg7N7zcnprxhdWZTtNrVhNuWV5ytV92tvkQEU8JVQsIho2oJKSD0F-5_8Au5eAknjThr-0fCzBHCEALLT33FJGIrZ1rMBA2Je5fh1ACX6MvSCOJoKNjssmS6BJHDUi0izx4v_z6_Q0cHtYVYSHtkH--HVPJq8kUCzl9tB1EOiP3CcRvJ0N0i2Iaaiiq5xf9a3N_gPHlJIb8UK6RxHOgDqSk07ZJuEoPb8qn3dlhGCH3J6FauYuO80gEEzD1h3m7pOHPtgKQcTU6MuEn18n52h-vgTrVVaFDlijrtlVV3Hmy8eSQRdzvj0Vg8LGBC3RYgbSaGlDgmPQuBD8dfaRZ0NUqcG6dFURetCI-2eFy39gQAnpnNpYuv/p.jpeg?size=2048x1536&size_mode=3">
   <meta name="og:description" property="og:description" content="Nazywam się Bartłomiej Borys">
 
   <link rel="stylesheet" href="css/style.css">
