--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta name="og:title" property="og:title" content="Rusty.">
   <meta name="og:image" property="og:image" content="https://ucc5a2d63677a20ecc96b78ce98f.previews.dropboxusercontent.com/p/thumb/AA_X3xlRw1loEImiiYG5TYAbCvq94zdu9VS4gg7N7zcnprxhdWZTtNrVhNuWV5ytV92tvkQEU8JVQsIho2oJKSD0F-5_8Au5eAknjThr-0fCzBHCEALLT33FJGIrZ1rMBA2Je5fh1ACX6MvSCOJoKNjssmS6BJHDUi0izx4v_z6_Q0cHtYVYSHtkH--HVPJq8kUCzl9tB1EOiP3CcRvJ0N0i2Iaaiiq5xf9a3N_gPHlJIb8UK6RxHOgDqSk07ZJuEoPb8qn3dlhGCH3J6FauYuO80gEEzD1h3m7pOHPtgKQcTU6MuEn18n52h-vgTrVVaFDlijrtlVV3Hmy8eSQRdzvj0Vg8LGBC3RYgbSaGlDgmPQuBD8dfaRZ0NUqcG6dFURetCI-2eFy39gQAnpnNpYuv/p.jpeg?size=2048x1536&size_mode=3">
   <meta name="og:description" property="og:description" content="Nazywam się Bartłomiej Borys">
-
+  <meta name="google-site-verification" content="google4843d12337afed54.html">
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/fontello.css">
   <link rel="preconnect" href="https://fonts.gstatic.com">
